# nomoi-lex

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
docs/: SSMC_DATA_REQUIREMENTS.md
fixtures/: sample_5_claims.csv
scripts/: vendor-validator.sh
src/lex/: __init__.py  __main__.py  default_column_mapping.yaml  engine_adapter.py  parser.py
src/lex/audit/: supabase_logger.py
src/lex/audit/migrations/: 001_lex_validation_runs.sql  002_lex_claim_outcomes.sql
src/lex/reports/: renderer.py
src/lex/reports/templates/: report_base.html  report_claim_detail.html  report_styles.css  report_summary.html
src/lex/session/: __init__.py  env.py  hashing.py  state.py
src/lex/ui/: __init__.py  export.py  results_detail.py  results_table.py  upload.py
tests/: test_export.py  test_parser.py  test_pdf_renderer.py  test_supabase_logger.py
